--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
